--- a/package.json
+++ b/package.json
@@ -150,6 +150,8 @@
     ]
   },
   "devDependencies": {
+    "@types/classnames": "^2.2.10",
+    "@types/history": "^4.7.8",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.5",
     "eslint": "^6.8.0",
