--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^16.9.49",
     "@typescript-eslint/eslint-plugin": "^2.10.0",
     "@typescript-eslint/parser": "^2.10.0",
+    "axios": "^0.20.0",
     "babel-eslint": "10.1.0",
     "babel-jest": "^24.9.0",
     "babel-loader": "8.1.0",
@@ -63,6 +64,7 @@
     "resolve-url-loader": "3.1.1",
     "sass-loader": "8.0.2",
     "semver": "6.3.0",
+    "socket.io-client": "^4.1.3",
     "style-loader": "0.23.1",
     "styled-components": "^5.2.0",
     "terser-webpack-plugin": "2.3.8",
@@ -151,7 +153,9 @@
   },
   "devDependencies": {
     "@types/classnames": "^2.2.10",
+    "@types/express": "^4.17.8",
     "@types/history": "^4.7.8",
+    "@types/morgan": "^1.9.1",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.5",
     "eslint": "^6.8.0",
