--- a/package.json
+++ b/package.json
@@ -158,6 +158,7 @@
     "@types/morgan": "^1.9.1",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.5",
+    "@types/styled-components": "^5.1.12",
     "eslint": "^6.8.0",
     "prettier": "^2.1.2"
   }
