--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,5 +1,11 @@
 {
-  "printWidth": 80,
-  "jsxSingleQuote": true,
-  "trailingComma": "all"
+  "printWidth": 100,
+  "tabWidth": 2,
+  "singleQuote": true,
+  "semi": true,
+  "trailingComma": "es5",
+  "bracketSpacing": true,
+  "jsxBracketSameLine": false,
+  "arrowParens": "avoid",
+  "proseWrap": "never"
 }
