--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "jest-environment-jsdom-fourteen": "1.0.1",
     "jest-resolve": "24.9.0",
     "jest-watch-typeahead": "0.4.2",
+    "lodash": "^4.17.21",
     "mini-css-extract-plugin": "0.9.0",
     "mobx": "^5.15.7",
     "mobx-react": "^6.3.0",
@@ -155,6 +156,7 @@
     "@types/classnames": "^2.2.10",
     "@types/express": "^4.17.8",
     "@types/history": "^4.7.8",
+    "@types/lodash": "^4.14.172",
     "@types/morgan": "^1.9.1",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.5",
